# osu-link

./: .env.example  .gitignore  README.md  RELEASING.md  dev.cmd  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: build-installer.yml  publish-tauri.yml  release-desktop.yml
.tauri/: osu-link.key.pub
discord-bot/: index.mjs  package-lock.json  package.json
party-server/: Dockerfile  README.md  api.mjs  auth.mjs  control.mjs  db.mjs  index.mjs  install-pi.sh  package-lock.json  package.json  systemd-run-screen.sh
scripts/: resolve-and-sync-version.mjs  sync-tauri-version.mjs  tauri-build-with-signing.mjs
src/: AchievementShareCard.tsx  AchievementsPanel.tsx  App.css  App.tsx  BattlesPanel.tsx  BeatmapResultCard.tsx  BeatmapsetDetailModal.tsx  CollectionsPanel.tsx  DownloadLogsPanel.tsx  FriendProfileModal.tsx  JapaneseTextBackdrop.tsx  MainPaneSticky.tsx  NeuSelect.tsx  OnboardingFlow.tsx  OverlayApp.tsx  PartyPanel.tsx  PersonalStatsPanel.tsx  PlayerRankCard.tsx  SearchDownloadPanel.tsx  SocialLeaderboard.tsx  SocialPanel.tsx  TitleBar.tsx  TrainPanel.tsx  TrainingStatsSection.tsx  autoUpdate.ts  battleSubmitFromOsu.ts  beatmapSetStarRange.test.ts  beatmapSetStarRange.ts  challengeScoring.test.ts  challengeScoring.ts  collectionShare.ts  constants.ts  desktopNotify.ts  downloadLog.ts  main.tsx  models.ts  osuPlayerRankFetch.ts  overlayPin.ts  playerRank.test.ts  playerRank.ts  (+20 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: beatmap_avg_pp.rs  collections.rs  discord_control.rs  import.rs  lib.rs  local_library.rs  main.rs  oauth.rs  osu_api.rs  osu_overlay_win.rs  osu_process.rs  overlay_hotkeys_win.rs  party_discovery.rs  party_embedded.rs  paths.rs  settings.rs  user_beatmap_best.rs
src/achievements/: catalog.ts  evaluate.test.ts  evaluate.ts
src/party/: parseLobbyCode.ts  partyClient.ts  partyConnectErrors.ts  partyConnectUrls.ts  protocol.test.ts  protocol.ts
src/stats/: StatsCharts.tsx  StatsHero.tsx  StatsInsights.tsx  (+5 more)
