[package]
name = "osu-link"
version = "0.1.0"
description = "osu!stable beatmap downloader and importer"
authors = ["you"]
edition = "2021"

[lib]
name = "osu_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tiny_http = "0.12"
urlencoding = "2"
rand = "0.8"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "1"
dirs = "5"
