[package]
name = "osu-link"
version = "1.0.3-2"
description = "osu!stable beatmap downloader and importer"
authors = ["you"]
edition = "2021"

[lib]
name = "osu_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tiny_http = "0.12"
urlencoding = "2"
rand = "0.8"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
thiserror = "1"
dirs = "5"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
http = "1"
